[project]
name = "owl-api"
version = "0.1.0"
description = "FastAPI wrapper around mdlacasse/Owl with state-tax post-processing; backs FinanceKeeper's Retirement tab."
requires-python = ">=3.10,<3.14"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Curran Gehring", email = "curran@tuckermilling.com" }]
dependencies = [
    "owlplanner>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy",
    "pandas",
    "tomli-w",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owl_api"]

[tool.ruff]
line-length = 110
target-version = "py310"
